improve vcrtrace storage location
For security reasons we only allow the `vrctrace` feature
to write to a specific folder.
For consistency we change it from 'tmp/debug' to 'tmp/check_mk/debug'.
For convenience we create the directory upon site creation.

CMK-27519

Change-Id: Id5284cab9ad9b3becbce910a46557b26a466d36f

--- a/omd/packages/check_mk/BUILD
+++ b/omd/packages/check_mk/BUILD
@@ -199,6 +199,7 @@ pkg_mkdirs(
         "skel/tmp/check_mk/piggyback_sources",
         "skel/tmp/check_mk/counters",
         "skel/tmp/check_mk/cache",
+        "skel/tmp/check_mk/debug",
     ],
 )
 
